# founderscrew

./: .env.example  .gitignore  Dockerfile  README.md  implementation_plan.md  pyproject.toml  start.md
.github/workflows/: deploy.yml
docs/: architecture.md  demo_script.md  quickstart.md
founderscrew/: __init__.py  __main__.py  cli.py  config.py  logging_config.py  orchestrator.py  runtime_diagnostics.py  worker.py  workflow_queue.py
founderscrew/agents/: __init__.py  builder_agent.py  deployer_agent.py  planner_agent.py  qa_agent.py  reviewer_agent.py  tester_agent.py  triage_agent.py
founderscrew/dashboard/: app.py
founderscrew/dashboard/templates/: base.html  dashboard.html  env.html  issue_detail.html  logs.html  settings.html
founderscrew/setup/: __init__.py  auth_helpers.py  doctor.py  github_device_flow.py  tool_detector.py  wizard.py
founderscrew/state/: __init__.py  models.py  store.py
founderscrew/tools/: __init__.py  coderabbit_tools.py  coding_adapter.py  github_tools.py  model_routing.py  repo_profile.py  route_inference.py  screenshot_tools.py  search_tools.py  shell_tools.py
founderscrew/webhook/: __init__.py  server.py
tests/: test_agents.py  test_coding_adapter.py  test_dashboard.py  test_fallback.py  test_github_tools.py  test_logging.py  test_orchestrator.py  test_repo_profile.py  test_route_inference.py  test_runtime_diagnostics.py  test_screenshot_tools.py  test_shell_tools.py  test_store.py  test_supporting_tools.py  test_webhook.py  test_workflow_queue.py
