[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "founderscrew"
version = "0.1.0"
description = "A virtual DevOps team built on Google ADK and A2A Protocol"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "google-adk>=1.2.0",
    "google-cloud-aiplatform>=1.30.0",
    "google-cloud-firestore>=2.11.0",
    "PyGithub>=2.0.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "httpx>=0.24.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "litellm>=1.0.0",
    "Pillow>=9.0.0",
    "rich>=13.0.0",
    "questionary>=2.0.0",
    "pyyaml>=6.0",
    "click>=8.0.0",
    "keyring>=24.0.0"
]

[project.scripts]
founders-crew = "founderscrew.cli:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["founderscrew*"]
